--- a/indexe.html
+++ b/indexe.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-
+<!-- mon commit -->
 <body>
     <footer class="distibution">
         <div class="left">
